--- a/styles/style.css
+++ b/styles/style.css
@@ -152,6 +152,10 @@ nav ul li a {
     color: var(--primaryTextColor);
 }
 
+nav ul li a:hover {
+    fill: var(--primaryIconColor);
+}
+
 .burger div{
     width: 25px;
     height: 2px;
@@ -196,7 +200,7 @@ nav ul li a {
 
 }
 
-/* Bagian Services*/
+/* Services */
 #services {
     background-color: var(--secondaryBackgroundColor);
     padding: var(--sectionPadding);
@@ -206,7 +210,7 @@ nav ul li a {
     margin: 0 auto;
 }
 
-.section-title{
+.services-title{
     text-align: center;
 }
 
@@ -234,4 +238,120 @@ nav ul li a {
 
 .service-icon svg{
     fill: var(--primaryIconColorHover);
+}
+
+/* portofolio */
+#portofolios{
+    padding: var(--sectionPadding);
+}
+
+.portofolio {
+    border-radius: var(--itemBorderRadius);
+    overflow: hidden;
+    border: 1px solid var(--borderColor);
+}
+
+.portofolio-cover {
+    height: 250px;
+}
+
+.portofolio-cover img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.portofolio-info {
+    padding: 2rem 1.5rem;
+}
+
+.portofolio-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+.portofolio h4 {
+    font-weight: 500;
+    font-size: 1,05rem;
+}
+
+.portofolio-title a svg:hover {
+    fill: var(--primaryIconColor);
+}
+
+.portofolio-title a svg {
+    transition: 0.2s ease-in-out;
+}
+
+.portofolio-tags {
+    display: flex;
+    gap: 1rem;
+    margin: 1rem 0;
+}
+
+.portofolio-tags div {
+    font-size: 0.9rem;
+    border: 2px solid var(--borderColor);
+    padding: 0.4rem 1rem;
+    color: var(--secondaryTextColor);
+}
+
+/* Skills & Education */
+#skills{
+    padding: var(--sectionPadding);
+    background: var(--secondaryBackgroundColor);
+}
+
+.skills-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 3rem;
+}
+
+.education {
+    display: flex;
+    gap: 2rem;
+}
+
+.education .line {
+    padding: 0 0.7rem;
+}
+
+.education .line div {
+    width: 2px;
+    height: 100%;
+    background: var(--borderColor);
+    position: relative;
+}
+
+.education-info p {
+    margin: 0.6rem 0 1.4rem;
+}
+
+.education-years {
+    margin-bottom: 3rem;
+}
+
+/* dot */
+.education .line div::before {
+    content: "";
+    width: 15px;
+    height: 15px;
+    background: var(--borderColor);
+    border-radius: 50%;
+    position: absolute;
+    left: -6px;
+}
+
+.skills-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 1.5rem
+}
+
+.skills-grid ul {
+    line-height: 2rem;
+    padding: 0 1rem;
 }
