--- a/styles/style.css
+++ b/styles/style.css
@@ -357,3 +357,62 @@ nav ul li a:hover {
     line-height: 2rem;
     padding: 0 1rem;
 }
+
+/* Contact Section */
+#contact{
+    padding: var(--sectionPadding);
+}
+
+.contact {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 3rem ;
+}
+
+.contact-from div{
+    margin-bottom: 1.4rem;
+}
+
+.contact-from input, .contact-from textarea {
+    width: 100%;
+    padding: 0.75rem 1.3rem;
+    font-family: "Roboto", sans-serif;
+    background: var(--secondaryBackgroundColor);
+    border: 1px solid var(--borderColor);
+    border-radius: 3px;
+    resize: none;
+}
+
+.contact-from input::placeholder, .contact-from textarea::placeholder {
+    color: #ababab;
+}
+
+.contact-from input:focus, .contact-from textarea:focus {
+    outline: none;
+    border: 1px solid var(--dotccollor);
+}
+
+.btn-submit {
+    width: 100%;
+    padding: 0.75rem 1.3rem;
+    background-color: var(--primaryIconColor);
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: 0.75s ease-in-out;
+}
+
+.btn-submit:hover {
+    background: var(--primaryIconColorHover);
+}
+
+.contact-item-icon {
+    background: var(--linedotccollor);
+    width: 53px;
+    height: 53px;
+    border-radius: 9px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
