--- a/styles/style.css
+++ b/styles/style.css
@@ -71,6 +71,7 @@ a {
 
 .btn:hover {
     box-shadow:  rgba(0, 0, 0, 0.1) 0px 4px 6px;
+    color: var(--primaryIconColor);
 }
 
 /* Titles */
@@ -155,7 +156,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    fill: var(--primaryIconColor);
+    color: var(--primaryIconColor);
 }
 
 .burger div{
@@ -198,7 +199,7 @@ nav ul li a:hover {
 }
 
 .hero-right img {
-    width: 40%;
+    width: 50%;
 
 }
 
@@ -407,12 +408,49 @@ nav ul li a:hover {
     background: var(--primaryIconColorHover);
 }
 
+.contact-item {
+    display: flex;
+    gap: 1.5rem;
+    margin-bottom: 2rem;
+}
+
 .contact-item-icon {
-    background: var(--linedotccollor);
+    background: #f2f0ff ;
     width: 53px;
     height: 53px;
     border-radius: 9px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.contact-item-icon svg{
+    fill: var(--primaryIconColor);
+}
+
+.contact-item-icon h4 {
+    margin-bottom: 0.6rem;
+}
+
+/* footer section */
+footer{
+    padding: 4rem 0;
+    background: var(--secondaryBackgroundColor);
+    text-align: center;
+}
+
+.footer-icon {
+    margin-bottom: 1rem;
+}
+
+.footer-icon a{
+    margin: 0 0.5rem;
+}
+
+.footer-icon svg{
+    fill: var(--dotccollor);
+}
+
+.footer-icon svg:hover {
+    fill: #000;
 }
