--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -22,6 +22,18 @@
         cursor: pointer;
     }
 
+    .toggle-burger .line-1 {
+        transform: rotate(-45deg) translate(-5px, 7px);
+      }
+    
+      .toggle-burger .line-2 {
+        opacity: 0;
+      }
+    
+      .toggle-burger .line-3 {
+        transform: rotate(45deg) translate(-5px, -7px);
+      }
+
     /* Navigation */
     nav {
         position: fixed;
@@ -34,6 +46,7 @@
         border-left: 1px solid var(--borderColor) ;
         z-index: 9;
         transform: translateX(100%);
+        transition: 0.5s ease-in-out
     }
 
     nav ul {
@@ -44,11 +57,68 @@
     }
 
     .nav-active {
-        transform: translateX(1);
+        transform: translateX(0);
     }
-    
+
+    :root {
+        --sectionPadding: 4rem 0;
+    }
+  
+    .section-title {
+        font-size: 1.6rem;
+        margin: 0.5rem 0 2rem;
+    }
+
+    .pre-title {
+        font-size: 0.8rem;
+    }
+
+    #hero {
+        grid-template-columns: 1fr;
+        height: fit-content;
+    }
+
+    .hero-right {
+        order: -1;
+    }
+
+    .hero-right img {
+        padding-bottom: 3rem;
+        width: 40%;
+    }
+
+    .hero-left {
+        text-align: center;
+        padding-bottom: 5rem;
+    }
+
+    .hero-left .pre-title {
+        margin: 0 auto;
+    }
+
+    .hero-name {
+        font-size: 2.3rem;
+        margin-bottom: 0.5rem
+    }
+
+    .skills-grid {
+        gap: 1rem;
+    }
+
+    footer {
+        padding: 2rem;
+    }
+
 }
 
 @media screen and (max-width: 640px) {
+
+    .section-title{
+        font-size: 1.3rem;
+    }
+
+    .pre-title {
+        font-size: 0.7rem;
+    }
     
 }
